test_files/netlist_format/invalid/invalid_12_line_3.net
V1 N001 0 12
R1 out N001 1k
R out 0 1k
.tf V(out) V1
* DC transfer function analysis
.backanno
.end
